# snowflake-vs-postgres-poc

./: README.md  benchmark_results.json  hybrid_tables_benchmark_results.json  poc-results.md  pyproject.toml  run_benchmark.py  run_join_benchmark.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/join_benchmark/: README.md  __init__.py  hybrid_tables_benchmark.py  join_benchmark.md  postgres_hybrid_tables_benchmark.py  snowflake_hybrid_tables_benchmark.py
src/load_testing/: __init__.py  __main__.py  data_generator.py  main.py  postgres_benchmark.py  snowflake_benchmark.py  snowflake_hybrid_tables_benchmark.py
src/snowpark_vs_postgres_poc/: __init__.py  __main__.py
